--- a/Tree/.vscode/settings.json
+++ b/Tree/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "tuple": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "array": "cpp",
+        "string": "cpp",
+        "string_view": "cpp"
     }
 }
