--- a/POTD/September/.vscode/settings.json
+++ b/POTD/September/.vscode/settings.json
@@ -5,6 +5,7 @@
         "vector": "cpp",
         "regex": "cpp",
         "iostream": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "cmath": "cpp"
     }
 }
