--- a/POTD/October/.vscode/settings.json
+++ b/POTD/October/.vscode/settings.json
@@ -15,6 +15,8 @@
         "regex": "cpp",
         "valarray": "cpp",
         "iostream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "bitset": "cpp",
+        "utility": "cpp"
     }
 }
