--- a/POTD/October/.vscode/settings.json
+++ b/POTD/October/.vscode/settings.json
@@ -17,6 +17,7 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "bitset": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "tuple": "cpp"
     }
 }
